WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276865
[Viewer Mode] PiP breaks when hiding the <video> element while in Viewer Mode
https://bugs.webkit.org/show_bug.cgi?id=276865
Summary
[Viewer Mode] PiP breaks when hiding the <video> element while in Viewer Mode
Jer Noble
Reported
2024-07-21 11:00:58 PDT
[Viewer Mode] PiP breaks when hiding the <video> element while in Viewer Mode
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-07-21 11:01:05 PDT
<
rdar://problem/131786564
>
Jer Noble
Comment 2
2024-07-21 11:04:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31041
EWS
Comment 3
2024-07-23 17:37:58 PDT
Committed
281266@main
(c60efc0d6601): <
https://commits.webkit.org/281266@main
> Reviewed commits have been landed. Closing PR #31041 and removing active labels.
EWS
Comment 4
2024-07-24 18:53:08 PDT
Committed
280938.118@safari-7619-branch
(2b09c28f6bba): <
https://commits.webkit.org/280938.118@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1485 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug