Cherry-pick c60efc0d6601. rdar://131786564

[Viewer Mode] PiP breaks when hiding the <video> element while in Viewer Mode
    https://bugs.webkit.org/show_bug.cgi?id=276865
    rdar://131786564

    Reviewed by Eric Carlson.

    A mismatch in retain counts on either side of the UIProcess/WebContent process divide causes
    the VideoPresentationInterfaceMac to get torn down while PiP is still active. This gets the
    state machine into an unrecoverable state where the WebContent process thinks PiP is still
    active, but no PiP exists in the UIProcess.

    Drive-by fix: Fixing this retain count issue reveals a bug where we unconditionally use
    m_videoElement without null-checking in VideoPresentationModelVideoElement.

    * Source/WebCore/platform/cocoa/VideoPresentationModelVideoElement.mm:
    (WebCore::VideoPresentationModelVideoElement::requestFullscreenMode):
    * Source/WebKit/UIProcess/Cocoa/VideoPresentationManagerProxy.mm:
    (WebKit::VideoPresentationManagerProxy::setupFullscreenWithID):

    Canonical link: https://commits.webkit.org/281266@main

Canonical link: https://commits.webkit.org/280938.118@safari-7619-branch